# ai-agent-config

./: .gitignore  .para-config.yaml  CLAUDE.md  GEMINI_COMMANDS.md  PROCESSING.md  README.md  accounts.yaml  financial_profile.yaml  follow-up-check-demo.md  integrations.yaml  meeting-brief-2025-09-13-1:1-with-sarah.md  meeting-brief-2025-09-13-team-standup.md  notes  para-processor.py  para-templates.py  project_data_collector.py  project_status_analyzer.py  project_synchronizer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-para.sh  test-follow-up-items.md  test-note-enhanced-2.md  test-note-enhanced.md  test-note.md  test_data_collector.py  test_decision_analyzer.py  test_financial_tools.py  test_learn_commands.py  test_learn_outputformatter.py  test_learning_config.py  test_noteprocessor_follow_up.py  test_notes_commands.py  test_project_config.py  test_project_decide_formatter.py  test_project_review_generator.py  test_project_status.py  test_project_synchronizer.py  test_stakeholder_outputformatter.py  (+4 more)
.claude/: PROJECT_CONFIG_README.md  README.md  decision_frameworks.yaml  influence_frameworks.yaml  integrations.yaml  learning_goals.yaml  optimization_frameworks.yaml  projects.yaml  review_templates.yaml  settings.local.json  sources.yaml  stakeholder_contexts.yaml  stakeholder_database.yaml  team_roster.yaml  workflow_definitions.yaml
1-projects/: README.md  test-note.md
2-areas/: README.md
3-resources/: README.md
4-archive/: README.md
docs/: api-reference.md  claude-code-guide.md  error-codes.md  natural-language-guide.md  nlp-integration-summary.md  project-status-generator-completion.md  smart_query_parser_examples.md  testing-scenarios.md
inbox/: 2025-09-13-1700_second-test-meeting.md  2025-09-13-1700_test-meeting.md  2025-09-13-1701_sprint-planning-with-john.md  2025-09-13-1702_budget-review.md  2025-09-13-1702_performance-review.md  2025-09-13-1702_sprint-planning.md  2025-09-13-1718_final-demo.md  2025-09-13-1736_11.md  2025-09-13-1736_sprint-planning.md  2025-09-13-1736_test-from-claude-code-slash-command.md  2025-09-13-2107_meeting-brief-sprint-review.md  2025-09-24-1530_one-on-one-meeting.md  2025-10-01-1950_monthly-meeting-with-matthias.md  2025-10-01-1951_monthly-meeting-with-matthias.md  README.md
scripts/: __init__.py  para-processor.py  project_data_collector.py  project_planner.py  project_status_analyzer.py
templates/: README.md
test-notes/: malformed-note.md  research-note.md  sample-meeting.md
tests/: integration_test_project_status.py  test_api_manager.py  test_config_manager.py  test_datacollector_new.py  test_fuzzy_lookup.py  test_health_calculator.py  test_learning_config.py  test_nlp_processor.py  test_note_processor.py  test_output_formatter.py  (+6 more)
(+199 files in other folders)
